--- a/components/ProjectPage/ProjectPage.module.scss
+++ b/components/ProjectPage/ProjectPage.module.scss
@@ -62,6 +62,11 @@
     font-size: 1.25em;
 }
 
+.footer__see_all {
+    height: 75px;
+    width: 75px;
+}
+
 .footer__about {
     font-size: 1.25em;
 
